--- a/web/src/app/report/component/flow-chart/flow-chart.component.html
+++ b/web/src/app/report/component/flow-chart/flow-chart.component.html
@@ -40,6 +40,6 @@
   </form>
 </mat-expansion-panel>
 
-<mat-card *ngIf="flow?.dates?.length > 0">
+<mat-card *ngIf="flow">
   <div #chart [style.height]="chartHeight + 'em'"></div>
 </mat-card>
