--- a/web/src/app/common/component/currency-label/currency-label.component.html
+++ b/web/src/app/common/component/currency-label/currency-label.component.html
@@ -1,3 +1,3 @@
-<span *ngIf="!isCrypto()" class="fi" [ngClass]="formatCurrency()"></span>
-<i *ngIf="isCrypto()" class="cf" [ngClass]="formatCryptoCurrency()"></i>
-<span class="label" *ngIf="full">{{currency}}</span>
+<span *ngIf="!_currency?.crypto" class="fi" [ngClass]="formatCurrency()"></span>
+<i *ngIf="_currency?.crypto" class="cf" [ngClass]="formatCryptoCurrency()"></i>
+<span class="label" *ngIf="full">{{_currency?.name || '???'}}</span>
