--- a/web/src/app/common/component/currency-select/currency-select.component.html
+++ b/web/src/app/common/component/currency-select/currency-select.component.html
@@ -2,7 +2,7 @@
                 [full]="true"
                 (click)="showCurrencySelect()"></currency-label>
 <entry-select [nullable]="true" (select)="select($event)">
-  <entry-item *ngFor="let currency of settingsService.settings.currencies" [value]="currency">
-    <currency-label [currency]="currency" [full]="true"></currency-label>
+  <entry-item *ngFor="let currency of currencies" [value]="currency">
+    <currency-label [currency]="currency.name" [full]="true"></currency-label>
   </entry-item>
 </entry-select>
