--- a/web/src/app/reference/component/account-browser/account-browser.component.html
+++ b/web/src/app/reference/component/account-browser/account-browser.component.html
@@ -3,8 +3,8 @@
     <button mat-list-item [matMenuTriggerFor]="menu" *ngFor="let account of accounts">
       {{account.name}}
       <mat-menu #menu>
-        <button mat-menu-item (click)="edit(account.id)">Edit</button>
-        <button mat-menu-item (click)="delete(account.id)">Remove</button>
+        <button mat-menu-item (click)="edit(account.id!)">Edit</button>
+        <button mat-menu-item (click)="delete(account.id!)">Remove</button>
       </mat-menu>
     </button>
   </mat-action-list>
