--- a/web/src/app/operation/component/operation-view/operation-view.component.html
+++ b/web/src/app/operation/component/operation-view/operation-view.component.html
@@ -1,80 +1,84 @@
 <mat-card>
 
-  <mat-button-toggle-group (valueChange)="type = $event">
-    <mat-button-toggle [value]="'EXCHANGE'">Exchange</mat-button-toggle>
-    <mat-button-toggle [value]="'EXPENSE'">Expense</mat-button-toggle>
-    <mat-button-toggle [value]="'INCOME'">Income</mat-button-toggle>
-  </mat-button-toggle-group>
+  <mat-card-content>
 
-  <form [formGroup]="exchange" *ngIf="type == 'EXCHANGE'">
+    <mat-button-toggle-group [ngModel]="type" (ngModelChange)="type = $event">
+      <mat-button-toggle [value]="'EXCHANGE'">Exchange</mat-button-toggle>
+      <mat-button-toggle [value]="'EXPENSE'">Expense</mat-button-toggle>
+      <mat-button-toggle [value]="'INCOME'">Income</mat-button-toggle>
+    </mat-button-toggle-group>
 
-    <mat-form-field>
-      <mat-label>Date</mat-label>
-      <input formControlName="date" matInput [matDatepicker]="picker" readonly (click)="picker.open()">
-      <mat-datepicker touchUi #picker></mat-datepicker>
-    </mat-form-field>
+    <form [formGroup]="exchange" *ngIf="type == 'EXCHANGE'">
 
-    <mat-form-field>
-      <mat-label>From</mat-label>
-      <reference-input api="/account/reference" formControlName="accountFrom"></reference-input>
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Date</mat-label>
+        <input formControlName="date" matInput [matDatepicker]="picker" readonly (click)="picker.open()">
+        <mat-datepicker touchUi #picker></mat-datepicker>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Amount</mat-label>
-      <amount-input formControlName="amountFrom"></amount-input>
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>From</mat-label>
+        <reference-input api="/account/reference" formControlName="accountFrom"></reference-input>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>To</mat-label>
-      <reference-input api="/account/reference" formControlName="accountTo"></reference-input>
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Amount</mat-label>
+        <amount-input formControlName="amountFrom"></amount-input>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Amount</mat-label>
-      <amount-input formControlName="amountTo"></amount-input>
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>To</mat-label>
+        <reference-input api="/account/reference" formControlName="accountTo"></reference-input>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Description</mat-label>
-      <textarea matInput
-                formControlName="description"
-                cdkTextareaAutosize
-                #autosize="cdkTextareaAutosize"></textarea>
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Amount</mat-label>
+        <amount-input formControlName="amountTo"></amount-input>
+      </mat-form-field>
 
-  </form>
+      <mat-form-field>
+        <mat-label>Description</mat-label>
+        <textarea matInput
+                  formControlName="description"
+                  cdkTextareaAutosize
+                  #autosize="cdkTextareaAutosize"></textarea>
+      </mat-form-field>
+
+    </form>
 
 
-  <form [formGroup]="expenseIncome" *ngIf="type != 'EXCHANGE'">
+    <form [formGroup]="expenseIncome" *ngIf="type != 'EXCHANGE'">
 
-    <mat-form-field>
-      <mat-label>Date</mat-label>
-      <input formControlName="date" matInput [matDatepicker]="picker" readonly (click)="picker.open()">
-      <mat-datepicker touchUi #picker></mat-datepicker>
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Date</mat-label>
+        <input formControlName="date" matInput [matDatepicker]="picker" readonly (click)="picker.open()">
+        <mat-datepicker touchUi #picker></mat-datepicker>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Account</mat-label>
-      <reference-input api="/account/reference?type=ACCOUNT" formControlName="account"></reference-input>
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Account</mat-label>
+        <reference-input [api]="{url: '/account/reference', queryParams: {type: 'ACCOUNT'}}" formControlName="account"></reference-input>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Category</mat-label>
-      <reference-input [api]="'/account/reference?type=' + type" formControlName="category"></reference-input>
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Category</mat-label>
+        <reference-input [api]="{url: '/account/reference', queryParams: {type: type}}" formControlName="category"></reference-input>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Amount</mat-label>
-      <amount-input formControlName="amount"></amount-input>
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Amount</mat-label>
+        <amount-input formControlName="amount"></amount-input>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Description</mat-label>
-      <textarea matInput
-                formControlName="description"
-                cdkTextareaAutosize
-                #autosize="cdkTextareaAutosize"></textarea>
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Description</mat-label>
+        <textarea matInput
+                  formControlName="description"
+                  cdkTextareaAutosize
+                  #autosize="cdkTextareaAutosize"></textarea>
+      </mat-form-field>
 
-  </form>
+    </form>
+
+  </mat-card-content>
 </mat-card>
