--- a/web/src/app/settings/component/settings-editor.component.html
+++ b/web/src/app/settings/component/settings-editor.component.html
@@ -8,12 +8,12 @@
 
     <mat-form-field>
       <mat-label>Operation default account</mat-label>
-      <reference-input api="/account/reference?type=ACCOUNT" formControlName="operationDefaultAccount"></reference-input>
+      <reference-input [api]="{url: '/account/reference', queryParams: {type: 'ACCOUNT'}}" formControlName="operationDefaultAccount"></reference-input>
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>Operation cash account</mat-label>
-      <reference-input api="/account/reference?type=ACCOUNT" formControlName="operationCashAccount"></reference-input>
+      <reference-input [api]="{url: '/account/reference', queryParams: {type: 'ACCOUNT'}}" formControlName="operationCashAccount"></reference-input>
     </mat-form-field>
 
   </form>
