Fixed some issues

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -12,7 +12,7 @@
       <mat-divider></mat-divider>
       <a mat-list-item [routerLink]="['operation']" (click)="left.close()">Operation</a>
       <mat-divider></mat-divider>
-      <a mat-list-item [routerLink]="['setting']" (click)="left.close()">Settings</a>
+      <a mat-list-item [routerLink]="['settings']" (click)="left.close()">Settings</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content class="content" [class.content-wide]="wide">
