--- a/web/src/app/operation/component/operation-editor/operation-editor.component.html
+++ b/web/src/app/operation/component/operation-editor/operation-editor.component.html
@@ -1,1 +1,1 @@
-<operation-view [operation]="operation" (onSave)="save($event)" (onClose)="close()"></operation-view>
+<operation-view [type]="type" [operation]="operation" (onSave)="save($event)" (onClose)="close()"></operation-view>
