--- a/web/src/app/report/component/dashboard/dashboard.component.html
+++ b/web/src/app/report/component/dashboard/dashboard.component.html
@@ -1,13 +1,22 @@
-<mat-card *ngIf="dashboard">
-  <h1>{{dashboard.defaultCurrencyAmount | format: true}}</h1>
-  <h3 *ngIf="dashboard.usdCashAmount">{{dashboard.usdCashAmount | format: true}}</h3>
-  <div *ngFor="let cashFound of dashboard.cashFounds">{{cashFound | format: true}}</div>
+<mat-card *ngIf="dashboard" class="cash">
+  <mat-card-header>Cash</mat-card-header>
+  <mat-card-content>
+    <h1>{{dashboard.defaultCurrencyAmount | format: true}}</h1>
+    <h3 *ngIf="dashboard.usdCashAmount">{{dashboard.usdCashAmount | format: true}}</h3>
+    <div *ngFor="let cashFound of dashboard.cashFounds">{{cashFound | format: true}}</div>
+  </mat-card-content>
 </mat-card>
 
-<button mat-raised-button [routerLink]="['operation','new']" [queryParams]="{template: 'EXPENSE_CASH'}">Cash expense</button>
-<button mat-raised-button [routerLink]="['operation','new']" [queryParams]="{template: 'EXCHANGE_TO_CASH'}">Withdraw cash</button>
-<button mat-raised-button [routerLink]="['operation','new']" [queryParams]="{template: 'EXCHANGE_FROM_CASH'}">Topup cash</button>
+<div class="button-section">
+  <div class="title">Fast operations</div>
+  <button mat-raised-button class="expense" routerLink="/operation/new" [queryParams]="{template: 'EXPENSE_CASH'}">Cash expense</button>
+  <button mat-raised-button class="exchange" routerLink="/operation/new" [queryParams]="{template: 'EXCHANGE_TO_CASH'}">Withdraw cash</button>
+  <button mat-raised-button class="exchange" routerLink="/operation/new" [queryParams]="{template: 'EXCHANGE_FROM_CASH'}">Topup cash</button>
+</div>
 
-<button mat-raised-button [routerLink]="['flow-chart']">Flows</button>
-<button mat-raised-button [routerLink]="['current-funds-chart']">Current funds</button>
-<button mat-raised-button [routerLink]="['cumulative-funds-chart']">Cumulative funds</button>
+<div class="button-section">
+  <div class="title">Reports</div>
+  <button mat-raised-button [routerLink]="['flow-chart']">Flows</button>
+  <button mat-raised-button [routerLink]="['current-funds-chart']">Current funds</button>
+  <button mat-raised-button [routerLink]="['cumulative-funds-chart']">Cumulative funds</button>
+</div>
