--- a/web/src/app/settings/component/settings-editor.component.html
+++ b/web/src/app/settings/component/settings-editor.component.html
@@ -1,20 +1,22 @@
 <mat-card>
-  <form [formGroup]="form">
+  <mat-card-content>
+    <form [formGroup]="form">
 
-    <mat-form-field>
-      <mat-label>Operation default currency</mat-label>
-      <currency-input formControlName="operationDefaultCurrency"></currency-input>
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Operation default currency</mat-label>
+        <currency-input formControlName="operationDefaultCurrency"></currency-input>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Operation default account</mat-label>
-      <reference-input [api]="{url: '/account/reference', queryParams: {type: 'ACCOUNT'}}" formControlName="operationDefaultAccount"></reference-input>
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Operation default account</mat-label>
+        <reference-input [api]="{url: '/account/reference', queryParams: {type: 'ACCOUNT'}}" formControlName="operationDefaultAccount"></reference-input>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Operation cash account</mat-label>
-      <reference-input [api]="{url: '/account/reference', queryParams: {type: 'ACCOUNT'}}" formControlName="operationCashAccount"></reference-input>
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Operation cash account</mat-label>
+        <reference-input [api]="{url: '/account/reference', queryParams: {type: 'ACCOUNT'}}" formControlName="operationCashAccount"></reference-input>
+      </mat-form-field>
 
-  </form>
+    </form>
+  </mat-card-content>
 </mat-card>
