--- a/web/src/app/settings/component/settings-editor.component.scss
+++ b/web/src/app/settings/component/settings-editor.component.scss
@@ -1,17 +1,4 @@
-mat-card-header {
-  padding: 16px;
-}
-
 form {
-  display: flex;
-  flex-direction: column;
-}
-
-.management {
-  display: flex;
-  //grid-gap: 1em;
-  //grid-template-columns: min-content min-content;
-  button {
-    margin-right: 1em;
-  }
+  display: grid;
+  grid-auto-flow: row;
 }
