--- a/web/src/app/operation/component/operation-browser/operation-browser.component.html
+++ b/web/src/app/operation/component/operation-browser/operation-browser.component.html
@@ -24,6 +24,7 @@
       <mat-select formControlName="type">
         <mat-option [value]="null">Nothing</mat-option>
         <mat-option [value]="'EXPENSE'">Expense</mat-option>
+        <mat-option [value]="'TRANSFER'">Transfer</mat-option>
         <mat-option [value]="'INCOME'">Income</mat-option>
         <mat-option [value]="'EXCHANGE'">Exchange</mat-option>
       </mat-select>
@@ -31,12 +32,12 @@
 
     <mat-form-field>
       <mat-label>Account</mat-label>
-      <reference-input [api]="{url: '/account/reference', queryParams: {type: 'ACCOUNT'}}" formControlName="account"></reference-input>
+      <account-input [types]="['ACCOUNT']" formControlName="account"></account-input>
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>Category</mat-label>
-      <reference-input [api]="{url: '/account/reference', queryParams: {type: ['EXPENSE','INCOME']}}" formControlName="category"></reference-input>
+      <account-input [types]="['EXPENSE','INCOME']" formControlName="category"></account-input>
     </mat-form-field>
 
     <mat-form-field>
