--- a/web/src/app/operation/component/operation-label/operation-label.component.scss
+++ b/web/src/app/operation/component/operation-label/operation-label.component.scss
@@ -1,3 +1,5 @@
+@use "../../../../variables";
+
 :host {
   align-items: center;
   display: flex;
@@ -18,15 +20,15 @@
 }
 
 .income {
-  background-color: #66bb6a;
+  background-color: variables.$income-color;
 }
 
 .expense {
-  background-color: #ef5350;
+  background-color: variables.$expense-color;
 }
 
 .exchange {
-  background-color: #1e88e5;
+  background-color: variables.$exchange-color;
 }
 
 .amount {
