--- a/web/src/app/operation/component/operation-view/operation-view.component.html
+++ b/web/src/app/operation/component/operation-view/operation-view.component.html
@@ -2,13 +2,14 @@
 
   <mat-card-content>
 
-    <mat-button-toggle-group [ngModel]="type" (ngModelChange)="type = $event">
+    <mat-button-toggle-group [(ngModel)]="operation.type">
       <mat-button-toggle [value]="'EXCHANGE'">Exchange</mat-button-toggle>
+      <mat-button-toggle [value]="'TRANSFER'">Transfer</mat-button-toggle>
       <mat-button-toggle [value]="'EXPENSE'">Expense</mat-button-toggle>
       <mat-button-toggle [value]="'INCOME'">Income</mat-button-toggle>
     </mat-button-toggle-group>
 
-    <form [formGroup]="exchange" *ngIf="type == 'EXCHANGE'">
+    <form [formGroup]="exchange" *ngIf="operation.type == 'EXCHANGE'">
 
       <mat-form-field>
         <mat-label>Date</mat-label>
@@ -18,7 +19,7 @@
 
       <mat-form-field>
         <mat-label>From</mat-label>
-        <reference-input api="/account/reference" formControlName="accountFrom"></reference-input>
+        <account-input formControlName="accountFrom"></account-input>
       </mat-form-field>
 
       <mat-form-field>
@@ -28,7 +29,7 @@
 
       <mat-form-field>
         <mat-label>To</mat-label>
-        <reference-input api="/account/reference" formControlName="accountTo"></reference-input>
+        <account-input formControlName="accountTo"></account-input>
       </mat-form-field>
 
       <mat-form-field>
@@ -46,8 +47,40 @@
 
     </form>
 
+    <form [formGroup]="transfer" *ngIf="operation.type == 'TRANSFER'">
 
-    <form [formGroup]="expenseIncome" *ngIf="type != 'EXCHANGE'">
+      <mat-form-field>
+        <mat-label>Date</mat-label>
+        <input formControlName="date" matInput [matDatepicker]="picker" readonly (click)="picker.open()">
+        <mat-datepicker touchUi #picker></mat-datepicker>
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>From</mat-label>
+        <account-input [types]="['ACCOUNT']" formControlName="accountFrom"></account-input>
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>To</mat-label>
+        <account-input [types]="['ACCOUNT']" formControlName="accountTo"></account-input>
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Amount</mat-label>
+        <amount-input formControlName="amount"></amount-input>
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Description</mat-label>
+        <textarea matInput
+                  formControlName="description"
+                  cdkTextareaAutosize
+                  #autosize="cdkTextareaAutosize"></textarea>
+      </mat-form-field>
+
+    </form>
+
+    <form [formGroup]="expenseIncome" *ngIf="operation.type == 'EXPENSE' || operation.type == 'INCOME'">
 
       <mat-form-field>
         <mat-label>Date</mat-label>
@@ -57,12 +90,12 @@
 
       <mat-form-field>
         <mat-label>Account</mat-label>
-        <reference-input [api]="{url: '/account/reference', queryParams: {type: 'ACCOUNT'}}" formControlName="account"></reference-input>
+        <account-input [types]="['ACCOUNT']" formControlName="account"></account-input>
       </mat-form-field>
 
       <mat-form-field>
         <mat-label>Category</mat-label>
-        <reference-input [api]="{url: '/account/reference', queryParams: {type: type}}" formControlName="category"></reference-input>
+        <account-input [types]="[operation.type]" formControlName="category"></account-input>
       </mat-form-field>
 
       <mat-form-field>
