--- a/web/src/app/report/component/current-fund-chart/current-funds-chart.component.html
+++ b/web/src/app/report/component/current-fund-chart/current-funds-chart.component.html
@@ -1,3 +1,26 @@
-<mat-card>
-  
+<mat-expansion-panel>
+  <mat-expansion-panel-header>Settings</mat-expansion-panel-header>
+
+  <form [formGroup]="settings">
+    <mat-form-field>
+      <mat-label>Currency</mat-label>
+      <currency-input formControlName="currency"></currency-input>
+    </mat-form-field>
+  </form>
+</mat-expansion-panel>
+
+<mat-card *ngIf="currentFund">
+  <mat-card-content class="funds">
+    <ng-container *ngFor="let entry of currentFund.entries">
+      <h4 class="account">{{entry.account.name}}</h4>
+      <ng-container *ngFor="let amountEntry of entry.amounts">
+        <amount-label [amount]="amountEntry.amount"></amount-label>
+        <amount-label [amount]="amountEntry.commonAmount" class="common-amount"
+                      *ngIf="amountEntry.commonAmount.currency != amountEntry.amount.currency"></amount-label>
+        <div *ngIf="amountEntry.commonAmount.currency == amountEntry.amount.currency"></div>
+        <div class="bar" matRipple (click)="drillDown(entry, amountEntry)"
+             [style.width]="amountRelativeWidth(amountEntry.commonAmount) + '%'"></div>
+      </ng-container>
+    </ng-container>
+  </mat-card-content>
 </mat-card>
