--- a/web/src/app/report/component/dashboard/dashboard.component.html
+++ b/web/src/app/report/component/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
 
 <div class="button-section">
   <div class="title">Reports</div>
-  <button mat-raised-button [routerLink]="['flow-chart']">Flows</button>
-  <button mat-raised-button [routerLink]="['current-funds-chart']">Current funds</button>
-  <button mat-raised-button [routerLink]="['cumulative-funds-chart']">Cumulative funds</button>
+  <button mat-raised-button class="report" routerLink="/flow-chart">Flows</button>
+  <button mat-raised-button class="report" routerLink="/current-funds-chart">Current funds</button>
+  <button mat-raised-button class="report" routerLink="/cumulative-funds-chart">Cumulative funds</button>
 </div>
