--- a/web/src/app/report/component/dashboard/dashboard.component.scss
+++ b/web/src/app/report/component/dashboard/dashboard.component.scss
@@ -1,3 +1,5 @@
+@use "../../../../variables";
+
 :host {
   display: flex;
   flex-direction: column;
@@ -27,16 +29,18 @@
 }
 
 .expense {
-  background-color: #ef5350!important;
+  background-color: variables.$expense-color!important;
   color: #fff!important;
 }
 
 .exchange {
-  background-color: #1e88e5!important;
+  background-color: variables.$exchange-color!important;
   color: #fff!important;
 }
 
-
+.report {
+  background-color: variables.$report-color!important;
+}
 
 
 
