--- a/web/src/app/settings/component/settings-editor.component.html
+++ b/web/src/app/settings/component/settings-editor.component.html
@@ -9,12 +9,12 @@
 
       <mat-form-field>
         <mat-label>Operation default account</mat-label>
-        <reference-input [api]="{url: '/account/reference', queryParams: {type: 'ACCOUNT'}}" formControlName="operationDefaultAccount"></reference-input>
+        <account-input [types]="['ACCOUNT']" formControlName="operationDefaultAccount"></account-input>
       </mat-form-field>
 
       <mat-form-field>
         <mat-label>Operation cash account</mat-label>
-        <reference-input [api]="{url: '/account/reference', queryParams: {type: 'ACCOUNT'}}" formControlName="operationCashAccount"></reference-input>
+        <account-input [types]="['ACCOUNT']" formControlName="operationCashAccount"></account-input>
       </mat-form-field>
 
     </form>
