Added category mappings

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -14,6 +14,8 @@
       <mat-divider></mat-divider>
       <a mat-list-item [routerLink]="['operation']" (click)="left.close()">Operation</a>
       <mat-divider></mat-divider>
+      <a mat-list-item [routerLink]="['category-mapping']" (click)="left.close()">Category Mapping</a>
+      <mat-divider></mat-divider>
       <a mat-list-item [routerLink]="['settings']" (click)="left.close()">Settings</a>
     </mat-nav-list>
   </mat-sidenav>
