--- a/web/src/app/exchangerate/component/exchange-rate-editor/exchange-rate-editor.component.html
+++ b/web/src/app/exchangerate/component/exchange-rate-editor/exchange-rate-editor.component.html
@@ -1,6 +1,6 @@
 <editor title="Exchange rate" (onSave)="save()" (onClose)="close()" [saveDisabled]="!form.valid">
   <mat-card>
-    <mat-card-content class="card-content-form">
+    <mat-card-content>
       <form [formGroup]="form">
 
         <mat-form-field>
