Improved import tool view

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -11,10 +11,10 @@
       <mat-divider></mat-divider>
       <a mat-list-item [routerLink]="['currency']" (click)="left.close()">Currency</a>
       <a mat-list-item [routerLink]="['account']" (click)="left.close()">Account</a>
-      <mat-divider></mat-divider>
       <a mat-list-item [routerLink]="['operation']" (click)="left.close()">Operation</a>
       <mat-divider></mat-divider>
       <a mat-list-item [routerLink]="['category-mapping']" (click)="left.close()">Category Mapping</a>
+      <a mat-list-item [routerLink]="['import-data']" (click)="left.close()">Import</a>
       <mat-divider></mat-divider>
       <a mat-list-item [routerLink]="['settings']" (click)="left.close()">Settings</a>
     </mat-nav-list>
