--- a/web/src/app/importexport/component/import-data-start/import-data-start.component.html
+++ b/web/src/app/importexport/component/import-data-start/import-data-start.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-content>
-    <form>
+    <form [formGroup]="form">
 
       <mat-form-field>
         <mat-label>Parser</mat-label>
