--- a/web/src/app/operation/component/operation-editor/operation-editor.component.html
+++ b/web/src/app/operation/component/operation-editor/operation-editor.component.html
@@ -1,1 +1,5 @@
-<operation-view [operation]="operation" (onSave)="save($event)" (onClose)="close()"></operation-view>
+<mat-card>
+    <mat-card-content>
+        <operation-view [operation]="operation"></operation-view>
+    </mat-card-content>
+</mat-card>
