--- a/web/src/app/importexport/component/category-mapping-editor/category-mapping-editor.component.html
+++ b/web/src/app/importexport/component/category-mapping-editor/category-mapping-editor.component.html
@@ -1,22 +1,5 @@
 <mat-card>
   <mat-card-content>
-    <form [formGroup]="form">
-
-      <mat-form-field>
-        <mat-label>Parser</mat-label>
-        <reference-input api="/parser/reference" formControlName="parser"></reference-input>
-      </mat-form-field>
-
-      <mat-form-field>
-        <mat-label>Pattern</mat-label>
-        <input matInput formControlName="pattern">
-      </mat-form-field>
-
-      <mat-form-field>
-        <mat-label>Category</mat-label>
-        <account-input [types]="['EXPENSE','INCOME']" formControlName="category"></account-input>
-      </mat-form-field>
-
-    </form>
+    <category-mapping-view [categoryMapping]="categoryMapping"></category-mapping-view>
   </mat-card-content>
 </mat-card>
