--- a/web/src/app/operation/component/operation-view/operation-view.component.html
+++ b/web/src/app/operation/component/operation-view/operation-view.component.html
@@ -1,117 +1,143 @@
-<mat-card>
+<mat-button-toggle-group [(ngModel)]="_operation.type">
+  <mat-button-toggle [value]="'EXCHANGE'">Exchange</mat-button-toggle>
+  <mat-button-toggle [value]="'TRANSFER'">Transfer</mat-button-toggle>
+  <mat-button-toggle [value]="'EXPENSE'">Expense</mat-button-toggle>
+  <mat-button-toggle [value]="'INCOME'">Income</mat-button-toggle>
+</mat-button-toggle-group>
 
-  <mat-card-content>
+<form [formGroup]="exchange" *ngIf="_operation.type == 'EXCHANGE'">
 
-    <mat-button-toggle-group [(ngModel)]="operation.type">
-      <mat-button-toggle [value]="'EXCHANGE'">Exchange</mat-button-toggle>
-      <mat-button-toggle [value]="'TRANSFER'">Transfer</mat-button-toggle>
-      <mat-button-toggle [value]="'EXPENSE'">Expense</mat-button-toggle>
-      <mat-button-toggle [value]="'INCOME'">Income</mat-button-toggle>
-    </mat-button-toggle-group>
+  <mat-form-field>
+    <mat-label>Date</mat-label>
+    <input formControlName="date" matInput [matDatepicker]="picker" readonly (click)="picker.open()">
+    <mat-datepicker touchUi #picker></mat-datepicker>
+  </mat-form-field>
 
-    <form [formGroup]="exchange" *ngIf="operation.type == 'EXCHANGE'">
+  <mat-form-field>
+    <mat-label>From</mat-label>
+    <account-input formControlName="accountFrom"></account-input>
+  </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>Date</mat-label>
-        <input formControlName="date" matInput [matDatepicker]="picker" readonly (click)="picker.open()">
-        <mat-datepicker touchUi #picker></mat-datepicker>
-      </mat-form-field>
+  <mat-form-field>
+    <mat-label>Amount</mat-label>
+    <amount-input formControlName="amountFrom"></amount-input>
+  </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>From</mat-label>
-        <account-input formControlName="accountFrom"></account-input>
-      </mat-form-field>
+  <mat-form-field>
+    <mat-label>To</mat-label>
+    <account-input formControlName="accountTo"></account-input>
+  </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>Amount</mat-label>
-        <amount-input formControlName="amountFrom"></amount-input>
-      </mat-form-field>
+  <mat-form-field>
+    <mat-label>Amount</mat-label>
+    <amount-input formControlName="amountTo"></amount-input>
+  </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>To</mat-label>
-        <account-input formControlName="accountTo"></account-input>
-      </mat-form-field>
+  <mat-form-field>
+    <mat-label>Description</mat-label>
+    <textarea matInput
+              formControlName="description"
+              cdkTextareaAutosize
+              #autosize="cdkTextareaAutosize"></textarea>
+  </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>Amount</mat-label>
-        <amount-input formControlName="amountTo"></amount-input>
-      </mat-form-field>
+</form>
 
-      <mat-form-field>
-        <mat-label>Description</mat-label>
-        <textarea matInput
-                  formControlName="description"
-                  cdkTextareaAutosize
-                  #autosize="cdkTextareaAutosize"></textarea>
-      </mat-form-field>
+<form [formGroup]="transfer" *ngIf="_operation.type == 'TRANSFER'">
 
-    </form>
+  <mat-form-field>
+    <mat-label>Date</mat-label>
+    <input formControlName="date" matInput [matDatepicker]="picker" readonly (click)="picker.open()">
+    <mat-datepicker touchUi #picker></mat-datepicker>
+  </mat-form-field>
 
-    <form [formGroup]="transfer" *ngIf="operation.type == 'TRANSFER'">
+  <mat-form-field>
+    <mat-label>From</mat-label>
+    <account-input [types]="['ACCOUNT']" formControlName="accountFrom"></account-input>
+  </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>Date</mat-label>
-        <input formControlName="date" matInput [matDatepicker]="picker" readonly (click)="picker.open()">
-        <mat-datepicker touchUi #picker></mat-datepicker>
-      </mat-form-field>
+  <mat-form-field>
+    <mat-label>To</mat-label>
+    <account-input [types]="['ACCOUNT']" formControlName="accountTo"></account-input>
+  </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>From</mat-label>
-        <account-input [types]="['ACCOUNT']" formControlName="accountFrom"></account-input>
-      </mat-form-field>
+  <mat-form-field>
+    <mat-label>Amount</mat-label>
+    <amount-input formControlName="amount"></amount-input>
+  </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>To</mat-label>
-        <account-input [types]="['ACCOUNT']" formControlName="accountTo"></account-input>
-      </mat-form-field>
+  <mat-form-field>
+    <mat-label>Description</mat-label>
+    <textarea matInput
+              formControlName="description"
+              cdkTextareaAutosize
+              #autosize="cdkTextareaAutosize"></textarea>
+  </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>Amount</mat-label>
-        <amount-input formControlName="amount"></amount-input>
-      </mat-form-field>
+</form>
 
-      <mat-form-field>
-        <mat-label>Description</mat-label>
-        <textarea matInput
-                  formControlName="description"
-                  cdkTextareaAutosize
-                  #autosize="cdkTextareaAutosize"></textarea>
-      </mat-form-field>
+<form [formGroup]="expense" *ngIf="_operation.type == 'EXPENSE'">
 
-    </form>
+  <mat-form-field>
+    <mat-label>Date</mat-label>
+    <input formControlName="date" matInput [matDatepicker]="picker" readonly (click)="picker.open()">
+    <mat-datepicker touchUi #picker></mat-datepicker>
+  </mat-form-field>
 
-    <form [formGroup]="expenseIncome" *ngIf="operation.type == 'EXPENSE' || operation.type == 'INCOME'">
+  <mat-form-field>
+    <mat-label>Account</mat-label>
+    <account-input [types]="['ACCOUNT']" formControlName="account"></account-input>
+  </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>Date</mat-label>
-        <input formControlName="date" matInput [matDatepicker]="picker" readonly (click)="picker.open()">
-        <mat-datepicker touchUi #picker></mat-datepicker>
-      </mat-form-field>
+  <mat-form-field>
+    <mat-label>Category</mat-label>
+    <account-input [types]="['EXPENSE']" formControlName="category"></account-input>
+  </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>Account</mat-label>
-        <account-input [types]="['ACCOUNT']" formControlName="account"></account-input>
-      </mat-form-field>
+  <mat-form-field>
+    <mat-label>Amount</mat-label>
+    <amount-input formControlName="amount"></amount-input>
+  </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>Category</mat-label>
-        <account-input [types]="[operation.type]" formControlName="category"></account-input>
-      </mat-form-field>
+  <mat-form-field>
+    <mat-label>Description</mat-label>
+    <textarea matInput
+              formControlName="description"
+              cdkTextareaAutosize
+              #autosize="cdkTextareaAutosize"></textarea>
+  </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>Amount</mat-label>
-        <amount-input formControlName="amount"></amount-input>
-      </mat-form-field>
+</form>
 
-      <mat-form-field>
-        <mat-label>Description</mat-label>
-        <textarea matInput
-                  formControlName="description"
-                  cdkTextareaAutosize
-                  #autosize="cdkTextareaAutosize"></textarea>
-      </mat-form-field>
+<form [formGroup]="income" *ngIf="_operation.type == 'INCOME'">
 
-    </form>
+  <mat-form-field>
+    <mat-label>Date</mat-label>
+    <input formControlName="date" matInput [matDatepicker]="picker" readonly (click)="picker.open()">
+    <mat-datepicker touchUi #picker></mat-datepicker>
+  </mat-form-field>
 
-  </mat-card-content>
-</mat-card>
+  <mat-form-field>
+    <mat-label>Account</mat-label>
+    <account-input [types]="['ACCOUNT']" formControlName="account"></account-input>
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Category</mat-label>
+    <account-input [types]="['INCOME']" formControlName="category"></account-input>
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Amount</mat-label>
+    <amount-input formControlName="amount"></amount-input>
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Description</mat-label>
+    <textarea matInput
+              formControlName="description"
+              cdkTextareaAutosize
+              #autosize="cdkTextareaAutosize"></textarea>
+  </mat-form-field>
+
+</form>
