--- a/web/src/app/importexport/component/category-mapping-browser/category-mapping-browser.component.html
+++ b/web/src/app/importexport/component/category-mapping-browser/category-mapping-browser.component.html
@@ -17,6 +17,7 @@
 
   <mat-paginator [hidePageSize]="true"
                  [showFirstLastButtons]="true"
+                 [pageSize]="categoryMappingPage.size"
                  [pageIndex]="categoryMappingPage.page"
                  [length]="categoryMappingPage.total"
                  (page)="onPage($event)"></mat-paginator>
