--- a/web/src/app/operation/component/operation-browser/operation-browser.component.html
+++ b/web/src/app/operation/component/operation-browser/operation-browser.component.html
@@ -49,6 +49,7 @@
 
   <mat-paginator [hidePageSize]="true"
                  [showFirstLastButtons]="true"
+                 [pageSize]="operationService.operationPage.size"
                  [pageIndex]="operationService.operationPage.page"
                  [length]="operationService.operationPage.total"
                  (page)="onPage($event)"></mat-paginator>
