--- a/web/src/app/importexport/component/import-data-view/import-data-view.component.scss
+++ b/web/src/app/importexport/component/import-data-view/import-data-view.component.scss
@@ -2,7 +2,7 @@
 
 :host {
   display: grid;
-  grid-template-columns: 25% 1fr;
+  grid-template-columns: 30% 1fr;
   grid-gap: 1rem;
   height: 100%;
   overflow: hidden;
@@ -42,7 +42,12 @@
       width: .2rem;
       height: 3rem;
       border-radius: .2rem;
-      margin-right: 16px;
+      margin-right: 0;
+    }
+
+    .option-icon {
+      margin-left: 4px;
+      margin-right: 4px;
     }
 
     .no-suggestion {
@@ -52,6 +57,10 @@
 
     .mdc-list-item.mdc-list-item--with-one-line {
       height: 4rem;
+    }
+
+    .skip {
+      opacity: .5;
     }
   }
 }
@@ -69,6 +78,16 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  position: relative;
+
+  .in-progress {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+  }
 }
 
 .error-content {
@@ -77,19 +96,14 @@
   align-items: center;
 }
 
-.command-toolbar {
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-}
-
 .suggested-operation {
   mat-card-content {
     display: flex;
     flex-direction: row;
     gap: 1rem;
+    align-items: center;
 
-    operation-label {
+    .operation-label {
       flex-grow: 1;
     }
   }
