--- a/web/src/app/reference/component/account-browser/account-browser.component.html
+++ b/web/src/app/reference/component/account-browser/account-browser.component.html
@@ -1,12 +1,51 @@
-<mat-card *ngIf="accounts.length > 0">
-  <mat-action-list>
-    <button mat-list-item [matMenuTriggerFor]="menu" *ngFor="let account of accounts">
-      {{account.name}}
-      <mat-menu #menu>
-        <button mat-menu-item (click)="edit(account.id!)">Edit</button>
-        <button mat-menu-item (click)="delete(account.id!)">Remove</button>
-      </mat-menu>
-    </button>
-  </mat-action-list>
+<mat-card>
+  <mat-tab-group>
+
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <mat-icon>account_balance_wallet</mat-icon>
+      </ng-template>
+      <mat-action-list>
+        <button mat-list-item [matMenuTriggerFor]="menu" *ngFor="let account of accounts">
+          {{account.name}}
+          <mat-menu #menu>
+            <button mat-menu-item (click)="edit(account.id!)">Edit</button>
+            <button mat-menu-item (click)="delete(account.id!)">Remove</button>
+          </mat-menu>
+        </button>
+      </mat-action-list>
+    </mat-tab>
+
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <mat-icon class="expense">money_off</mat-icon>
+      </ng-template>
+      <mat-action-list>
+        <button mat-list-item [matMenuTriggerFor]="menu" *ngFor="let expense of expenses">
+          {{expense.name}}
+          <mat-menu #menu>
+            <button mat-menu-item (click)="edit(expense.id!)">Edit</button>
+            <button mat-menu-item (click)="delete(expense.id!)">Remove</button>
+          </mat-menu>
+        </button>
+      </mat-action-list>
+    </mat-tab>
+
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <mat-icon class="income">attach_money</mat-icon>
+      </ng-template>
+      <mat-action-list>
+        <button mat-list-item [matMenuTriggerFor]="menu" *ngFor="let income of incomes">
+          {{income.name}}
+          <mat-menu #menu>
+            <button mat-menu-item (click)="edit(income.id!)">Edit</button>
+            <button mat-menu-item (click)="delete(income.id!)">Remove</button>
+          </mat-menu>
+        </button>
+      </mat-action-list>
+    </mat-tab>
+
+  </mat-tab-group>
 </mat-card>
 <button mat-fab class="fab" (click)="add()"><mat-icon>add</mat-icon></button>
