--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -16,7 +16,10 @@
       <a mat-list-item [routerLink]="['category-mapping']" (click)="left.close()">Category Mapping</a>
       <a mat-list-item [routerLink]="['import-data']" (click)="left.close()">Import</a>
       <mat-divider></mat-divider>
-      <a mat-list-item [routerLink]="['settings']" (click)="left.close()">Settings</a>
+      <a mat-list-item [routerLink]="['settings']" (click)="left.close()">
+        Settings
+        <span class="version" *ngIf="settingsService.settings">({{settingsService.settings.version}})</span>
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content class="content" [class.content-wide]="isWideScreen()">
