--- a/web/src/app/operation/component/operation-browser/operation-browser.component.html
+++ b/web/src/app/operation/component/operation-browser/operation-browser.component.html
@@ -58,7 +58,10 @@
 <mat-card *ngIf="operationService.operationPage.operations.length > 0">
   <mat-action-list>
     <button mat-list-item [matMenuTriggerFor]="menu" *ngFor="let operation of operationService.operationPage.operations">
-      <operation-label [operation]="operation"></operation-label>
+      <span class="row">
+        <mat-checkbox (click)="$event.stopPropagation()"></mat-checkbox>
+        <operation-label [operation]="operation"></operation-label>
+      </span>
       <mat-menu #menu>
         <button mat-menu-item (click)="copy(operation.id!)">Copy</button>
         <button mat-menu-item (click)="edit(operation.id!)">Edit</button>
