--- a/web/src/app/operation/component/operation-view/operation-view.component.scss
+++ b/web/src/app/operation/component/operation-view/operation-view.component.scss
@@ -1,5 +1,8 @@
-form {
+.form {
   display: flex;
   flex-direction: column;
-  padding-top: 1em;
+}
+
+mat-button-toggle-group {
+  margin-bottom: 1em;
 }
