--- a/web/src/app/report/component/current-fund-chart/current-funds-chart.component.scss
+++ b/web/src/app/report/component/current-fund-chart/current-funds-chart.component.scss
@@ -15,7 +15,7 @@ form {
   display: grid;
   grid-template-columns: min-content min-content 1fr;
   grid-gap: .4em;
-  padding: 0 2em;
+  padding: 2em;
 }
 
 .account {
