Added revise tool

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -15,6 +15,7 @@
       <mat-divider></mat-divider>
       <a mat-list-item [routerLink]="['category-mapping']" (click)="left.close()">Category Mapping</a>
       <a mat-list-item [routerLink]="['import-data']" (click)="left.close()">Import</a>
+      <a mat-list-item [routerLink]="['operation-revise']" (click)="left.close()">Revise</a>
       <mat-divider></mat-divider>
       <a mat-list-item [routerLink]="['settings']" (click)="left.close()">
         Settings
