--- a/web/src/app/operation/component/operation-browser/operation-browser.component.html
+++ b/web/src/app/operation/component/operation-browser/operation-browser.component.html
@@ -1,4 +1,4 @@
-<mat-expansion-panel #filter>
+<mat-expansion-panel>
   <mat-expansion-panel-header>
     <mat-panel-title>Filter</mat-panel-title>
   </mat-expansion-panel-header>
